tests/programs/invalid/double.java
public class double {
  protected double x;
}